[gd_scene format=3 uid="uid://lxno8luvk20y"]

[ext_resource type="Script" uid="uid://iru4e87kcgfl" path="res://scripts/tile_scale_container.gd" id="1_1hlwb"]
[ext_resource type="Script" uid="uid://bosh6hnrjct5k" path="res://scripts/colors_layer.gd" id="1_danll"]
[ext_resource type="Texture2D" uid="uid://c8q44nhppqi4" path="res://sprites/Background-npr.png" id="2_danll"]
[ext_resource type="FontFile" uid="uid://cqaiaflnj0gq7" path="res://Gaegu-Bold.ttf" id="3_cq3gs"]
[ext_resource type="Texture2D" uid="uid://os5hxlton3ao" path="res://sprites/uis/x.PNG" id="5_4fso5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_umkka"]

[sub_resource type="LabelSettings" id="LabelSettings_fpjj3"]
font = ExtResource("3_cq3gs")
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_nvq2b"]
font = ExtResource("3_cq3gs")
font_size = 42
font_color = Color(0, 0, 0, 1)

[node name="ColorsLayer" type="CanvasLayer" unique_id=32325962]
script = ExtResource("1_danll")

[node name="Control" type="Control" parent="." unique_id=319613499]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel2" type="Panel" parent="Control" unique_id=1742309502]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control" unique_id=557485806]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -370.0
offset_top = -248.0
offset_right = 370.0
offset_bottom = 232.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_umkka")

[node name="TileScaleContainer" type="Container" parent="Control/Panel" unique_id=521044501]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1hlwb")
tile_scale = 0.785
metadata/_custom_type_script = "uid://iru4e87kcgfl"

[node name="NinePatchRect" type="NinePatchRect" parent="Control/Panel/TileScaleContainer" unique_id=694661654]
layout_mode = 2
texture = ExtResource("2_danll")
patch_margin_left = 81
patch_margin_top = 55
patch_margin_right = 70
patch_margin_bottom = 39

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel" unique_id=371322108]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = 71.0
offset_right = -21.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer" unique_id=1069570831]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer" unique_id=400060084]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/HBoxContainer4" unique_id=1088165993]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Enable custom colors"
label_settings = SubResource("LabelSettings_fpjj3")

[node name="CustomColorToggle" type="CheckButton" parent="Control/Panel/MarginContainer/VBoxContainer/HBoxContainer4" unique_id=415378241]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="ColorsContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer" unique_id=1510057003]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer/ColorsContainer" unique_id=1580124764]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/ColorsContainer/HBoxContainer" unique_id=1359673561]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Player color"
label_settings = SubResource("LabelSettings_fpjj3")

[node name="PlayerColor" type="ColorPickerButton" parent="Control/Panel/MarginContainer/VBoxContainer/ColorsContainer/HBoxContainer" unique_id=770265254]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
color = Color(0.7890625, 0.14178467, 0.14178467, 1)

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer/ColorsContainer" unique_id=1703901690]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/ColorsContainer/HBoxContainer2" unique_id=375628228]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Enemies color"
label_settings = SubResource("LabelSettings_fpjj3")

[node name="EnemyColor" type="ColorPickerButton" parent="Control/Panel/MarginContainer/VBoxContainer/ColorsContainer/HBoxContainer2" unique_id=59183126]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer/ColorsContainer" unique_id=448326928]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/ColorsContainer/HBoxContainer3" unique_id=1724511095]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Collectable color"
label_settings = SubResource("LabelSettings_fpjj3")

[node name="CollectableColor" type="ColorPickerButton" parent="Control/Panel/MarginContainer/VBoxContainer/ColorsContainer/HBoxContainer3" unique_id=918331534]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer/ColorsContainer" unique_id=1321839271]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/ColorsContainer/HBoxContainer4" unique_id=1551607249]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Background color"
label_settings = SubResource("LabelSettings_fpjj3")

[node name="BackgroundColor" type="ColorPickerButton" parent="Control/Panel/MarginContainer/VBoxContainer/ColorsContainer/HBoxContainer4" unique_id=433331873]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Control/Panel" unique_id=82163116]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -159.5
offset_top = 19.0
offset_right = 159.5
offset_bottom = 62.0
grow_horizontal = 2
text = "Map your colors !"
label_settings = SubResource("LabelSettings_nvq2b")

[node name="QuitButton" type="TextureButton" parent="Control" unique_id=2065130177]
modulate = Color(0.87109375, 0.25520325, 0.25520325, 1)
layout_mode = 0
offset_left = 854.0
offset_top = 89.0
offset_right = 917.0
offset_bottom = 152.0
texture_normal = ExtResource("5_4fso5")
ignore_texture_size = true
stretch_mode = 5
